--- a/src/main/webapp/WEB-INF/views/application-test-context.xml
+++ b/src/main/webapp/WEB-INF/views/application-test-context.xml
@@ -11,30 +11,30 @@
 	http://www.springframework.org/schema/context
 	http://www.springframework.org/schema/context/spring-context.xsd">
 	
-	<context:property-placeholder location="classpath:/config.properties" />
+	<context:property-placeholder location="classpath:/config-test.properties" />
 	<context:component-scan base-package="com.excilys.mapper" />
 	<context:component-scan base-package="com.excilys.persistance" />
 	<context:component-scan base-package="com.excilys.service" />	
 	
 	<beans>
 		<!-- JDBC Data Source for MySQL Database -->
-		<bean id="dataSource" class="com.jolbox.bonecp.BoneCPDataSource"
+		<bean id="dataSource" class="com.jolbox.bonecp.BoneCPDataSource" 
 			destroy-method="close"
-			p:driverClass="${dev.driver}"
-			p:jdbcUrl="${dev.url}"
-			p:username="${dev.user}"
-			p:password="${dev.password}" 
-			p:maxConnectionsPerPartition="${dev.maxConnectionsPerPartition}"
-			p:minConnectionsPerPartition="${dev.minConnectionsPerPartition}"
-			p:partitionCount="${dev.partitionCount}"/>
+			p:driverClass="${test-driver}"
+			p:jdbcUrl="${test-url}"
+			p:username="${test-user}"
+			p:password="${test-password}" 
+			p:maxConnectionsPerPartition="${test-maxConnectionsPerPartition}"
+			p:minConnectionsPerPartition="${test-minConnectionsPerPartition}"
+			p:partitionCount="${test-partitionCount}"/>
 	
-		<bean id="jdbcTemplate" class="org.springframework.jdbc.core.JdbcTemplate">
-			<property name="dataSource" ref="dataSource"/>
-		</bean>
+		<bean id="jdbcTemplate" class="org.springframework.jdbc.core.JdbcTemplate"
+			p:name="dataSource" 
+			p:ref="dataSource"/>
 
-		<bean id="transactionManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager">
-			<property name="dataSource" ref="dataSource"/>
-		</bean>
+		<bean id="transactionManager" class="org.springframework.jdbc.datasource.DataSourceTransactionManager"
+			p:name="dataSource" 
+			p:ref="dataSource"/>
 		
 		<tx:annotation-driven proxy-target-class="true"/>
 	</beans>	
